--- a/lc_main.tex
+++ b/lc_main.tex
@@ -133,7 +133,7 @@
 \newcommand{\Tx}{\type{Tx}}
 \newcommand{\Slot}{\type{Slot}}
 \newcommand{\TxAbs}{\type{TxAbs}}
-\newcommand{\B}{\mathbb{B}}
+\newcommand{\B}{\{0,1\}}
 \newcommand{\TxOut}{\type{TxOut}}
 \newcommand{\UTxO}{\type{UTxO}}
 \newcommand{\txId}{\msf{txId}}
@@ -241,10 +241,10 @@
 \newcommand{\chkSpec}[1]{\ensuremath{\llbracket#1\rrbracket}_{\type{DSL}}}
 \newcommand{\applyMPScript}[1]{\ensuremath{\llbracket#1\rrbracket}}
 
-\newcommand{\true}{\type{True}}
-\newcommand{\false}{\type{False}}
-\newcommand{\True}{\type{True}}
-\newcommand{\False}{\type{False}}
+\newcommand{\true}{\type{1}}
+\newcommand{\false}{\type{0}}
+\newcommand{\True}{\type{1}}
+\newcommand{\False}{\type{0}}
 
 \newcommand{\leteq}{:=}
 
