--- a/lcbib.bib
+++ b/lcbib.bib
@@ -357,12 +357,6 @@ location = {Zagreb, Croatia}
       url={https://arxiv.org/abs/2410.03347}
 }
 
-@misc{celo,
-      title={The Celo Protocol: A Multi-Asset Cryptographic Protocol for Decentralized Social Payments}, 
-      author={cLabs Team},
-      year={2025},
-      url={https://celo.org/papers/whitepaper}
-}
 
 @misc{khalani,
       title={Khalani Arcadia: An Open Platform for Intent-Driven Agent Collaboration}, 
@@ -430,4 +424,12 @@ address="Singapore",
 pages="239--263",
 abstract="Stake-based multiparty cryptographic primitives operate in a setting where participants are associated with their stake, security is argued against an adversary that is bounded by the total stake it possesses ---as opposed to number of parties--- and we are interested in scalability, i.e., the complexity of critical operations depends only logarithmically in the number of participants (who are assumed to be numerous).",
 isbn="978-981-97-8013-6"
+}
+
+
+@misc{celo,
+      title={Plumo: An Ultralight Blockchain Client}, 
+      author={Psi Vesely , Kobi Gurkan , Michael Straka , Ariel Gabizon , Philipp Jovanovic , Georgios Konstantopoulos , Asa Oines , Marek Olszewski, Eran Tromer} ,
+      year={2025},
+      url={https://celo.org/papers/plumo}
 }
